// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit Test: BasicAppServiceList  should render properly:  should render properly when data is loading 1`] = `
Array [
  <div
    className="ant-row-flex ant-row-flex-middle action-container"
  >
    <div
      className="ant-col-lg-24"
    >
      <div
        className="table-header table-header-inner action-wrap"
      >
        <button
          className="ant-btn action-button"
          onClick={[Function]}
          type="button"
        >
          <i
            className="anticon anticon-plus action-icon"
            style={Object {}}
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="plus"
              fill="currentColor"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M848 474H550V152h-76v322H176c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h298v322h76V550h298c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </i>
          <span>
            Add App Service
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="ant-table-wrapper hc-list portList"
  >
    <div
      className="ant-spin-nested-loading"
    >
      <div>
        <div
          className="ant-spin ant-spin-spinning"
        >
          <div
            className="loading-icon ant-spin-dot"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 32 32\\">
  <path transform=\\"translate(2)\\" d=\\"M0 12 V20 H4 V12z\\"> 
    <animate attributeName=\\"d\\" values=\\"M0 12 V20 H4 V12z; M0 4 V28 H4 V4z; M0 12 V20 H4 V12z; M0 12 V20 H4 V12z\\" dur=\\"1.2s\\" repeatCount=\\"indefinite\\" begin=\\"0\\" keytimes=\\"0;.2;.5;1\\" keySplines=\\"0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.8 0.4 0.8\\" calcMode=\\"spline\\"  />
  </path>
  <path transform=\\"translate(8)\\" d=\\"M0 12 V20 H4 V12z\\">
    <animate attributeName=\\"d\\" values=\\"M0 12 V20 H4 V12z; M0 4 V28 H4 V4z; M0 12 V20 H4 V12z; M0 12 V20 H4 V12z\\" dur=\\"1.2s\\" repeatCount=\\"indefinite\\" begin=\\"0.2\\" keytimes=\\"0;.2;.5;1\\" keySplines=\\"0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.8 0.4 0.8\\" calcMode=\\"spline\\"  />
  </path>
  <path transform=\\"translate(14)\\" d=\\"M0 12 V20 H4 V12z\\">
    <animate attributeName=\\"d\\" values=\\"M0 12 V20 H4 V12z; M0 4 V28 H4 V4z; M0 12 V20 H4 V12z; M0 12 V20 H4 V12z\\" dur=\\"1.2s\\" repeatCount=\\"indefinite\\" begin=\\"0.4\\" keytimes=\\"0;.2;.5;1\\" keySplines=\\"0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.8 0.4 0.8\\" calcMode=\\"spline\\" />
  </path>
  <path transform=\\"translate(20)\\" d=\\"M0 12 V20 H4 V12z\\">
    <animate attributeName=\\"d\\" values=\\"M0 12 V20 H4 V12z; M0 4 V28 H4 V4z; M0 12 V20 H4 V12z; M0 12 V20 H4 V12z\\" dur=\\"1.2s\\" repeatCount=\\"indefinite\\" begin=\\"0.6\\" keytimes=\\"0;.2;.5;1\\" keySplines=\\"0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.8 0.4 0.8\\" calcMode=\\"spline\\" />
  </path>
  <path transform=\\"translate(26)\\" d=\\"M0 12 V20 H4 V12z\\">
    <animate attributeName=\\"d\\" values=\\"M0 12 V20 H4 V12z; M0 4 V28 H4 V4z; M0 12 V20 H4 V12z; M0 12 V20 H4 V12z\\" dur=\\"1.2s\\" repeatCount=\\"indefinite\\" begin=\\"0.8\\" keytimes=\\"0;.2;.5;1\\" keySplines=\\"0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.8 0.4 0.8\\" calcMode=\\"spline\\" />
  </path>
</svg>
",
                }
              }
              style={
                Object {
                  "fill": "#4a90e2",
                  "height": 40,
                  "width": 40,
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="ant-spin-container ant-spin-blur"
      >
        <div
          className="ant-table ant-table-small ant-table-empty ant-table-scroll-position-left"
          style={Object {}}
        >
          <div
            className="ant-table-content"
          >
            <div
              className="ant-table-body"
              onScroll={[Function]}
              onWheel={[Function]}
              style={Object {}}
            >
              <table
                className=""
                style={Object {}}
              >
                <colgroup>
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                </colgroup>
                <thead
                  className="ant-table-thead"
                >
                  <tr
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <th
                      className=""
                    >
                      <div>
                        App Service
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        # vPorts
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        App Service Group
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  className="ant-table-tbody"
                />
              </table>
            </div>
            <div
              className="ant-table-placeholder"
            >
              No data
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Unit Test: BasicAppServiceList  should render properly:  should render properly when data is ready 1`] = `
Array [
  <div
    className="ant-row-flex ant-row-flex-middle action-container"
  >
    <div
      className="ant-col-lg-24"
    >
      <div
        className="table-header table-header-inner action-wrap"
      >
        <button
          className="ant-btn action-button"
          onClick={[Function]}
          type="button"
        >
          <i
            className="anticon anticon-plus action-icon"
            style={Object {}}
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="plus"
              fill="currentColor"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M848 474H550V152h-76v322H176c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h298v322h76V550h298c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </i>
          <span>
            Add App Service
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="ant-table-wrapper hc-list portList"
  >
    <div
      className="ant-spin-nested-loading"
    >
      <div
        className="ant-spin-container"
      >
        <div
          className="ant-table ant-table-small ant-table-scroll-position-left"
          style={Object {}}
        >
          <div
            className="ant-table-content"
          >
            <div
              className="ant-table-body"
              onScroll={[Function]}
              onWheel={[Function]}
              style={Object {}}
            >
              <table
                className=""
                style={Object {}}
              >
                <colgroup>
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                </colgroup>
                <thead
                  className="ant-table-thead"
                >
                  <tr
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <th
                      className=""
                    >
                      <div>
                        App Service
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        # vPorts
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        App Service Group
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  className="ant-table-tbody"
                >
                  <tr
                    className="ant-table-row ant-table-row-level-0"
                    data-row-key={0}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <span
                        className="ant-table-row-indent indent-level-0"
                        style={
                          Object {
                            "paddingLeft": "0px",
                          }
                        }
                      />
                      <div
                        style={
                          Object {
                            "display": "inline-block",
                            "verticalAlign": "middle",
                            "width": "180px",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "overflow": "hidden",
                              "textOverflow": "ellipsis",
                              "whiteSpace": "nowrap",
                              "width": "180px",
                            }
                          }
                          title="appSvc1"
                        >
                          appSvc1
                        </div>
                      </div>
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      80+tcp
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      appSvcGrp1
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="editColumn"
                      >
                        <i>
                          <img
                            src="/images/svg/icon-analytics.svg"
                          />
                        </i>
                        <i
                          onClick={[Function]}
                        >
                          <img
                            src="/images/svg/icon-edit.svg"
                          />
                        </i>
                        <i>
                          <img
                            src="/images/svg/icon-more-actions.svg"
                          />
                        </i>
                      </div>
                    </td>
                  </tr>
                  <tr
                    className="ant-table-row ant-table-row-level-0"
                    data-row-key={1}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <span
                        className="ant-table-row-indent indent-level-0"
                        style={
                          Object {
                            "paddingLeft": "0px",
                          }
                        }
                      />
                      <div
                        style={
                          Object {
                            "display": "inline-block",
                            "verticalAlign": "middle",
                            "width": "180px",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "overflow": "hidden",
                              "textOverflow": "ellipsis",
                              "whiteSpace": "nowrap",
                              "width": "180px",
                            }
                          }
                          title="appSvc2"
                        >
                          appSvc2
                        </div>
                      </div>
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      81+udp
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      appSvcGrp2
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="editColumn"
                      >
                        <i>
                          <img
                            src="/images/svg/icon-analytics.svg"
                          />
                        </i>
                        <i
                          onClick={[Function]}
                        >
                          <img
                            src="/images/svg/icon-edit.svg"
                          />
                        </i>
                        <i>
                          <img
                            src="/images/svg/icon-more-actions.svg"
                          />
                        </i>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          className="ant-pagination ant-table-pagination mini"
          style={Object {}}
          unselectable="unselectable"
        >
          <li
            aria-disabled={true}
            className="ant-pagination-disabled ant-pagination-prev"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Previous Page"
          >
            <a
              className="ant-pagination-item-link"
            >
              <i
                className="anticon anticon-left"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="left"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </i>
            </a>
          </li>
          <li
            className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex="0"
            title={1}
          >
            <a>
              1
            </a>
          </li>
          <li
            aria-disabled={true}
            className="ant-pagination-disabled ant-pagination-next"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Next Page"
          >
            <a
              className="ant-pagination-item-link"
            >
              <i
                className="anticon anticon-right"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="right"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                  />
                </svg>
              </i>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`Unit Test: BasicAppServiceList  should render properly:  should render sliding page properly 1`] = `
Array [
  <div
    className="ant-row-flex ant-row-flex-middle action-container"
  >
    <div
      className="ant-col-lg-24"
    >
      <div
        className="table-header table-header-inner action-wrap"
      >
        <button
          className="ant-btn action-button"
          onClick={[Function]}
          type="button"
        >
          <i
            className="anticon anticon-plus action-icon"
            style={Object {}}
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="plus"
              fill="currentColor"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M848 474H550V152h-76v322H176c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h298v322h76V550h298c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </i>
          <span>
            Add App Service
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="ant-table-wrapper hc-list portList"
  >
    <div
      className="ant-spin-nested-loading"
    >
      <div
        className="ant-spin-container"
      >
        <div
          className="ant-table ant-table-small ant-table-scroll-position-left"
          style={Object {}}
        >
          <div
            className="ant-table-content"
          >
            <div
              className="ant-table-body"
              onScroll={[Function]}
              onWheel={[Function]}
              style={Object {}}
            >
              <table
                className=""
                style={Object {}}
              >
                <colgroup>
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                </colgroup>
                <thead
                  className="ant-table-thead"
                >
                  <tr
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <th
                      className=""
                    >
                      <div>
                        App Service
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        # vPorts
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        App Service Group
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  className="ant-table-tbody"
                >
                  <tr
                    className="ant-table-row ant-table-row-level-0"
                    data-row-key={0}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <span
                        className="ant-table-row-indent indent-level-0"
                        style={
                          Object {
                            "paddingLeft": "0px",
                          }
                        }
                      />
                      <div
                        style={
                          Object {
                            "display": "inline-block",
                            "verticalAlign": "middle",
                            "width": "180px",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "overflow": "hidden",
                              "textOverflow": "ellipsis",
                              "whiteSpace": "nowrap",
                              "width": "180px",
                            }
                          }
                          title="appSvc1"
                        >
                          appSvc1
                        </div>
                      </div>
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      80+tcp
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      appSvcGrp1
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="editColumn"
                      >
                        <i>
                          <img
                            src="/images/svg/icon-analytics.svg"
                          />
                        </i>
                        <i
                          onClick={[Function]}
                        >
                          <img
                            src="/images/svg/icon-edit.svg"
                          />
                        </i>
                        <i>
                          <img
                            src="/images/svg/icon-more-actions.svg"
                          />
                        </i>
                      </div>
                    </td>
                  </tr>
                  <tr
                    className="ant-table-row ant-table-row-level-0"
                    data-row-key={1}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <span
                        className="ant-table-row-indent indent-level-0"
                        style={
                          Object {
                            "paddingLeft": "0px",
                          }
                        }
                      />
                      <div
                        style={
                          Object {
                            "display": "inline-block",
                            "verticalAlign": "middle",
                            "width": "180px",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "overflow": "hidden",
                              "textOverflow": "ellipsis",
                              "whiteSpace": "nowrap",
                              "width": "180px",
                            }
                          }
                          title="appSvc2"
                        >
                          appSvc2
                        </div>
                      </div>
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      81+udp
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      appSvcGrp2
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="editColumn"
                      >
                        <i>
                          <img
                            src="/images/svg/icon-analytics.svg"
                          />
                        </i>
                        <i
                          onClick={[Function]}
                        >
                          <img
                            src="/images/svg/icon-edit.svg"
                          />
                        </i>
                        <i>
                          <img
                            src="/images/svg/icon-more-actions.svg"
                          />
                        </i>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          className="ant-pagination ant-table-pagination mini"
          style={Object {}}
          unselectable="unselectable"
        >
          <li
            aria-disabled={true}
            className="ant-pagination-disabled ant-pagination-prev"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Previous Page"
          >
            <a
              className="ant-pagination-item-link"
            >
              <i
                className="anticon anticon-left"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="left"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </i>
            </a>
          </li>
          <li
            className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex="0"
            title={1}
          >
            <a>
              1
            </a>
          </li>
          <li
            aria-disabled={true}
            className="ant-pagination-disabled ant-pagination-next"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Next Page"
          >
            <a
              className="ant-pagination-item-link"
            >
              <i
                className="anticon anticon-right"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="right"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                  />
                </svg>
              </i>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <div
    className="mock-format-sliding-page"
    onClick={[Function]}
  >
    <div>
      New App Service
    </div>
    <div>
      Please provide following information to create a new App Service.
    </div>
    <div>
      <button
        className="ant-btn customized-button"
        onClick={[Function]}
        type="button"
      >
        <span>
          Save 
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Unit Test: BasicAppServiceList  should work properly:  should work properly when call onCloseSlidingPage 1`] = `
Array [
  <div
    className="ant-row-flex ant-row-flex-middle action-container"
  >
    <div
      className="ant-col-lg-24"
    >
      <div
        className="table-header table-header-inner action-wrap"
      >
        <button
          className="ant-btn action-button"
          onClick={[Function]}
          type="button"
        >
          <i
            className="anticon anticon-plus action-icon"
            style={Object {}}
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="plus"
              fill="currentColor"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M848 474H550V152h-76v322H176c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h298v322h76V550h298c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </i>
          <span>
            Add App Service
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="ant-table-wrapper hc-list portList"
  >
    <div
      className="ant-spin-nested-loading"
    >
      <div
        className="ant-spin-container"
      >
        <div
          className="ant-table ant-table-small ant-table-scroll-position-left"
          style={Object {}}
        >
          <div
            className="ant-table-content"
          >
            <div
              className="ant-table-body"
              onScroll={[Function]}
              onWheel={[Function]}
              style={Object {}}
            >
              <table
                className=""
                style={Object {}}
              >
                <colgroup>
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                </colgroup>
                <thead
                  className="ant-table-thead"
                >
                  <tr
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <th
                      className=""
                    >
                      <div>
                        App Service
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        # vPorts
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        App Service Group
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  className="ant-table-tbody"
                >
                  <tr
                    className="ant-table-row ant-table-row-level-0"
                    data-row-key={0}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <span
                        className="ant-table-row-indent indent-level-0"
                        style={
                          Object {
                            "paddingLeft": "0px",
                          }
                        }
                      />
                      <div
                        style={
                          Object {
                            "display": "inline-block",
                            "verticalAlign": "middle",
                            "width": "180px",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "overflow": "hidden",
                              "textOverflow": "ellipsis",
                              "whiteSpace": "nowrap",
                              "width": "180px",
                            }
                          }
                          title="appSvc1"
                        >
                          appSvc1
                        </div>
                      </div>
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      80+tcp
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      appSvcGrp1
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="editColumn"
                      >
                        <i>
                          <img
                            src="/images/svg/icon-analytics.svg"
                          />
                        </i>
                        <i
                          onClick={[Function]}
                        >
                          <img
                            src="/images/svg/icon-edit.svg"
                          />
                        </i>
                        <i>
                          <img
                            src="/images/svg/icon-more-actions.svg"
                          />
                        </i>
                      </div>
                    </td>
                  </tr>
                  <tr
                    className="ant-table-row ant-table-row-level-0"
                    data-row-key={1}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <span
                        className="ant-table-row-indent indent-level-0"
                        style={
                          Object {
                            "paddingLeft": "0px",
                          }
                        }
                      />
                      <div
                        style={
                          Object {
                            "display": "inline-block",
                            "verticalAlign": "middle",
                            "width": "180px",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "overflow": "hidden",
                              "textOverflow": "ellipsis",
                              "whiteSpace": "nowrap",
                              "width": "180px",
                            }
                          }
                          title="appSvc2"
                        >
                          appSvc2
                        </div>
                      </div>
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      81+udp
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      appSvcGrp2
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="editColumn"
                      >
                        <i>
                          <img
                            src="/images/svg/icon-analytics.svg"
                          />
                        </i>
                        <i
                          onClick={[Function]}
                        >
                          <img
                            src="/images/svg/icon-edit.svg"
                          />
                        </i>
                        <i>
                          <img
                            src="/images/svg/icon-more-actions.svg"
                          />
                        </i>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          className="ant-pagination ant-table-pagination mini"
          style={Object {}}
          unselectable="unselectable"
        >
          <li
            aria-disabled={true}
            className="ant-pagination-disabled ant-pagination-prev"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Previous Page"
          >
            <a
              className="ant-pagination-item-link"
            >
              <i
                className="anticon anticon-left"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="left"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </i>
            </a>
          </li>
          <li
            className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex="0"
            title={1}
          >
            <a>
              1
            </a>
          </li>
          <li
            aria-disabled={true}
            className="ant-pagination-disabled ant-pagination-next"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Next Page"
          >
            <a
              className="ant-pagination-item-link"
            >
              <i
                className="anticon anticon-right"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="right"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                  />
                </svg>
              </i>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`Unit Test: BasicAppServiceList  should work properly:  should work properly when call onCreateAppService 1`] = `
Array [
  <div
    className="ant-row-flex ant-row-flex-middle action-container"
  >
    <div
      className="ant-col-lg-24"
    >
      <div
        className="table-header table-header-inner action-wrap"
      >
        <button
          className="ant-btn action-button"
          onClick={[Function]}
          type="button"
        >
          <i
            className="anticon anticon-plus action-icon"
            style={Object {}}
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="plus"
              fill="currentColor"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M848 474H550V152h-76v322H176c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h298v322h76V550h298c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </i>
          <span>
            Add App Service
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="ant-table-wrapper hc-list portList"
  >
    <div
      className="ant-spin-nested-loading"
    >
      <div
        className="ant-spin-container"
      >
        <div
          className="ant-table ant-table-small ant-table-scroll-position-left"
          style={Object {}}
        >
          <div
            className="ant-table-content"
          >
            <div
              className="ant-table-body"
              onScroll={[Function]}
              onWheel={[Function]}
              style={Object {}}
            >
              <table
                className=""
                style={Object {}}
              >
                <colgroup>
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                  <col
                    style={
                      Object {
                        "minWidth": undefined,
                        "width": undefined,
                      }
                    }
                  />
                </colgroup>
                <thead
                  className="ant-table-thead"
                >
                  <tr
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <th
                      className=""
                    >
                      <div>
                        App Service
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        # vPorts
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        App Service Group
                      </div>
                    </th>
                    <th
                      className=""
                    >
                      <div>
                        
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  className="ant-table-tbody"
                >
                  <tr
                    className="ant-table-row ant-table-row-level-0"
                    data-row-key={0}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <span
                        className="ant-table-row-indent indent-level-0"
                        style={
                          Object {
                            "paddingLeft": "0px",
                          }
                        }
                      />
                      <div
                        style={
                          Object {
                            "display": "inline-block",
                            "verticalAlign": "middle",
                            "width": "180px",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "overflow": "hidden",
                              "textOverflow": "ellipsis",
                              "whiteSpace": "nowrap",
                              "width": "180px",
                            }
                          }
                          title="appSvc1"
                        >
                          appSvc1
                        </div>
                      </div>
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      80+tcp
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      appSvcGrp1
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="editColumn"
                      >
                        <i>
                          <img
                            src="/images/svg/icon-analytics.svg"
                          />
                        </i>
                        <i
                          onClick={[Function]}
                        >
                          <img
                            src="/images/svg/icon-edit.svg"
                          />
                        </i>
                        <i>
                          <img
                            src="/images/svg/icon-more-actions.svg"
                          />
                        </i>
                      </div>
                    </td>
                  </tr>
                  <tr
                    className="ant-table-row ant-table-row-level-0"
                    data-row-key={1}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "height": null,
                      }
                    }
                  >
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <span
                        className="ant-table-row-indent indent-level-0"
                        style={
                          Object {
                            "paddingLeft": "0px",
                          }
                        }
                      />
                      <div
                        style={
                          Object {
                            "display": "inline-block",
                            "verticalAlign": "middle",
                            "width": "180px",
                          }
                        }
                      >
                        <div
                          style={
                            Object {
                              "overflow": "hidden",
                              "textOverflow": "ellipsis",
                              "whiteSpace": "nowrap",
                              "width": "180px",
                            }
                          }
                          title="appSvc2"
                        >
                          appSvc2
                        </div>
                      </div>
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      81+udp
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      appSvcGrp2
                    </td>
                    <td
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="editColumn"
                      >
                        <i>
                          <img
                            src="/images/svg/icon-analytics.svg"
                          />
                        </i>
                        <i
                          onClick={[Function]}
                        >
                          <img
                            src="/images/svg/icon-edit.svg"
                          />
                        </i>
                        <i>
                          <img
                            src="/images/svg/icon-more-actions.svg"
                          />
                        </i>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          className="ant-pagination ant-table-pagination mini"
          style={Object {}}
          unselectable="unselectable"
        >
          <li
            aria-disabled={true}
            className="ant-pagination-disabled ant-pagination-prev"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Previous Page"
          >
            <a
              className="ant-pagination-item-link"
            >
              <i
                className="anticon anticon-left"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="left"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </i>
            </a>
          </li>
          <li
            className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex="0"
            title={1}
          >
            <a>
              1
            </a>
          </li>
          <li
            aria-disabled={true}
            className="ant-pagination-disabled ant-pagination-next"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={null}
            title="Next Page"
          >
            <a
              className="ant-pagination-item-link"
            >
              <i
                className="anticon anticon-right"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="right"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                  />
                </svg>
              </i>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;
